[tool.poetry]
name = "clinica-pydra-testing"
version = "0.1.0"
description = ""
authors = ["Ghislain Antony Vaillant <ghislain.vaillant@icm-institute.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0"
nest-asyncio = "^1.5.5"
pydra = "^0.18"
pydra-nipype1 = "^0.1.0"
nipype = {extras = ["pybids"], version = "^1.7.1"}
nilearn = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
